Chat part works with no issue

--- a/client/makefile
+++ b/client/makefile
@@ -3,10 +3,10 @@
 	cc ./obj/client.o ./obj/winControl.o -lpthread -lncurses -o ./bin/client
 
 ./obj/client.o: ./src/client.c ./inc/winControl.h
-	cc -c ./src/client.c -o ./obj/client.o
+	cc -c -ggdb ./src/client.c -o ./obj/client.o
 
 ./obj/winControl.o: ./src/winControl.c ./inc/winControl.h
-	cc -c ./src/winControl.c -o ./obj/winControl.o
+	cc -c -ggdb ./src/winControl.c -o ./obj/winControl.o
 
 all: ./bin/client
 
