Fixed a silly mistake regarding buffer size
Changes done:
+ Incoming and outgoing messages size where not correctly calculated.

--- a/server/makefile
+++ b/server/makefile
@@ -16,7 +16,7 @@
 #                     Dependencies
 # =======================================================
 ./obj/server.o : 
-	cc -c ./src/server.c -o ./obj/server.o
+	cc -c -ggdb ./src/server.c -o ./obj/server.o
 	      
   
 #
